# WOFOSTGym

./: .gitignore  README.md  gen_data.py  gen_data_multiple.py  gen_sunflower_data.py  gen_wheat_data.py  paper_plotting.py  pyproject.toml  requirements.txt  test_wofost.py  train_agent.py  utils.py  vis_data.py  vis_data_tensorboard.py
bash_scripts/: barley_wk_dqn.sh  barley_wk_ppo.sh  barley_wk_sac.sh  experiments.txt  experiments_laptop.txt  experiments_rerun.txt  gen_pear_data.sh  gen_runoff_data.sh  grape_dqn.sh  grape_ppo.sh  grape_rppo.sh  grape_sac.sh  jujube_default_dqn.sh  jujube_default_ppo.sh  jujube_default_sac.sh  jujube_threshold_wk_dqn.sh  jujube_threshold_wk_ppo.sh  jujube_threshold_wk_sac.sh  maize_threshold_wk_dqn.sh  maize_threshold_wk_ppo.sh  maize_threshold_wk_sac.sh  pear_threshold_wk_airl.sh  pear_threshold_wk_dqn.sh  pear_threshold_wk_ppo.sh  pear_threshold_wk_sac.sh  potato_limited_wk_ppo_1.sh  potato_limited_wk_ppo_2.sh  potato_limited_wk_ppo_3.sh  potato_limited_wk_ppo_4.sh  potato_ppo_1.sh  potato_ppo_2.sh  potato_ppo_3.sh  potato_ppo_4.sh  potato_rppo_1.sh  potato_rppo_2.sh  potato_rppo_3.sh  potato_rppo_4.sh  potato_scripts.txt  sunflower_cost_dqn.sh  sunflower_cost_ppo.sh  (+20 more)
data_generation/: gen_data.py  gen_data_multiple.py  gen_sunflower_data.py  gen_wheat_data.py
data_plotting/: vis_data.py  vis_data_paper.py  vis_data_tensorboard.py
gui/: agroPage.py  agroYamlHelper.py  customAgroPage.py  customConfigPage.py  envPage.py  genDataPage.py  homePage.py  notif.py  plotDisplay.py  successNotif.py  trainAgentPage.py  viewLogsPage.py  yamlHelper.py
output/: grape_ppo.err  grape_rppo.err  potato_ppo_1.err  potato_ppo_4.err  potato_ppotato_ppo_3.err  potatopotato_ppo_2_ppo_1.err  wheat_dqn.err  (+3 more)
pcse_gym/: README.md  pyproject.toml
pcse_gym/pcse_gym/: __init__.py  args.py  exceptions.py  policies.py  utils.py
pcse_gym/pcse_gym/envs/: harvest_annual.py  harvest_perennial.py  multi_annual.py  multi_perennial.py  plant_annual.py  plant_perennial.py  render.py  wofost_annual.py  wofost_base.py  wofost_grape.py  wofost_perennial.py
pcse_gym/pcse_gym/wrappers/: wrappers.py
(+321 files in other folders)
